[gd_scene load_steps=2 format=3 uid="uid://d4e5f6g7h8i9j0k1"]

[ext_resource type="Script" path="res://scenes/FreeModeScene.gd"    id=1]
[ext_resource type="Script" path="res://menus/widgets/UIButton.gd"  id=2]

[node name="FreeModeScene" type="Control"]
layout_mode     = 3
anchors_preset = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
grow_horizontal = 2
grow_vertical   = 2
script = ExtResource(1)

[node name="Background" type="ColorRect" parent="."]
layout_mode     = 1
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
grow_horizontal = 2
grow_vertical   = 2
color           = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode     = 1
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
grow_horizontal = 2
grow_vertical   = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode                         = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode                             = 2
theme_override_colors/font_color        = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size     = 32
horizontal_alignment                    = 1
text                                    = "Free Mode Settings"

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode         = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size     = Vector2(600, 0)
layout_mode             = 2
size_flags_vertical     = 3
horizontal_scroll_mode  = 0
vertical_scroll_mode    = 0

[node name="SettingsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ScrollContainer"]
layout_mode                         = 2
size_flags_horizontal               = 3
size_flags_vertical                 = 3
theme_override_constants/separation = 15

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode                         = 2
theme_override_constants/separation = 20
alignment                           = 1

[node name="StartButton" type="TextureButton" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode         = 2
script              = ExtResource(2)

[node name="ResetButton" type="TextureButton" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode         = 2
script              = ExtResource(2)

[node name="BackButton" type="TextureButton" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode         = 2
script              = ExtResource(2)
